@@ -66,6 +66,7 @@ Serge Tarkovski <serge.tarkovski@gmail.com>
 Edwin Cox
 Henning Schroeder <henning.schroeder@gmail.com>
 Stolati <mickael.kerbrat@gmail.com>
+Waldemar Kornewald <wkornewald@gmail.com>
 
 
 Erik gets a special mention for the contribution of the "Showcase".
