@@ -66,6 +66,7 @@ Copyright: 2010 Serge Tarkovski <serge.tarkovski@gmail.com>
 Copyright: 2010 Edwin Cox
 Copyright: 2010 Henning Schroeder <henning.schroeder@gmail.com>
 Copyright: 2010 Stolati <mickael.kerbrat@gmail.com>
+Copyright: 2010 Waldemar Kornewald <wkornewald@gmail.com>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
